--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -78,3 +78,32 @@ h3 {
 .picture {
   width: 30vw;
 }
+
+@media screen and (max-width: 768px) {
+  .div-1 {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .div-2 {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .ellipse-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .ellipse{
+    width: 60%;
+    height: 80%;
+  }
+
+  .picture {
+    width: 100%;
+  }
+}
+  
