--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -9,7 +9,6 @@
 nav {
   display: flex;
   justify-content: space-around;
- 
 }
 
 ul {
@@ -17,7 +16,7 @@ ul {
   list-style: none;
   justify-content: space-around;
   width: 50%;
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .nav-link {
@@ -34,4 +33,21 @@ ul {
   border-radius: 5px;
   padding: 0.5rem;
   transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-link {
+    font-size: 0.9rem;
+  }
+  nav {
+    padding-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+  ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+  }
 }
