--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -73,3 +73,74 @@
 .logos2 {
   width: 50vh;
 }
+
+
+@media screen and (max-width: 768px) {
+  .rosa-1 {
+   display: none;
+  }
+
+  .green-2 {
+    position: absolute;
+    width: 100vw;
+    height: 60vh;
+    left: 0px;
+    top: -30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 25px;
+  }
+
+  .green-3 {
+    position: absolute;
+    width: 100vw;
+    height: 50vh;
+    left: 0px;
+    top: 90vh;
+  }
+
+  .rosa-4 {
+    position: absolute;
+    width: 100vw;
+    height: 50vh;
+    left: 0px;
+    top: 50vh;
+  }
+
+  .logos {
+    width: 40vh;
+  }
+
+  .skillsdiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .skill {
+    font-family: jetbrains mono;
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .skills {
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  .img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .logos2 {
+    width: 40vh;
+  }
+}
+  
