--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -25,6 +25,7 @@ ul {
   font-size: 1.5rem;
   font-weight: 600;
   font-family: JetBrains Mono;
+  outline: none;
 }
 
 .nav-link:hover {
@@ -33,6 +34,7 @@ ul {
   border-radius: 5px;
   padding: 0.5rem;
   transition: all 0.3s ease-in-out;
+  outline: none;
 }
 
 @media screen and (max-width: 768px) {
