--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -74,22 +74,27 @@
   width: 50vh;
 }
 
-
 @media screen and (max-width: 768px) {
   .rosa-1 {
-   display: none;
+    position: absolute;
+    width: 100vw;
+    height: 50vh;
+    left: 0px;
+    top: 50px;
+    padding-right: 2rem;
+    background: #f5b6f7;
+    border: 4px solid black;
   }
 
   .green-2 {
     position: absolute;
     width: 100vw;
     height: 60vh;
+    padding: 2rem;
     left: 0px;
-    top: -30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-right: 25px;
+    top: 50vh;
+    border: 4px solid black;
+    background: #a4f3de;
   }
 
   .green-3 {
@@ -97,7 +102,10 @@
     width: 100vw;
     height: 50vh;
     left: 0px;
-    top: 90vh;
+    top: 110vh;
+    border: 4px solid black;
+    background: #a4f3de;
+    padding-right: 2rem;
   }
 
   .rosa-4 {
@@ -105,30 +113,26 @@
     width: 100vw;
     height: 50vh;
     left: 0px;
-    top: 50vh;
+    top: 160vh;
+    border: 4px solid black;
+    background: #f5b6f7;
   }
 
   .logos {
-    width: 40vh;
+    width: 80vw;
   }
 
   .skillsdiv {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: wrap;
+    display: inline-block;
   }
 
   .skill {
     font-family: jetbrains mono;
-    font-size: 1rem;
-    text-align: center;
+    font-size: 0.9rem;
   }
 
   .skills {
     font-size: 2rem;
-    text-align: center;
   }
 
   .img-container {
@@ -140,7 +144,6 @@
   }
 
   .logos2 {
-    width: 40vh;
+    width: 69vw;
   }
 }
-  
