--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,6 +1,6 @@
 .wrapper {
   background-color: #a4f3de;
-  height: 100vh;
+  height: 60vw;
   display: flex;
   justify-content: center;
   align-items: center;
