--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -147,3 +147,82 @@
     width: 69vw;
   }
 }
+
+
+/* media query for ipad */
+
+@media screen and (max-width: 1024px) {
+  .rosa-1 {
+    position: absolute;
+    width: 100vw;
+    height: 50vh;
+    left: 0px;
+    top: 50px;
+    padding-right: 2rem;
+    background: #f5b6f7;
+    border: 4px solid black;
+  }
+
+  .green-2 {
+    position: absolute;
+    width: 100vw;
+    height: 60vh;
+    padding: 2rem;
+    left: 0px;
+    top: 50vh;
+    border: 4px solid black;
+    background: #a4f3de;
+  }
+
+  .green-3 {
+    position: absolute;
+    width: 100vw;
+    height: 50vh;
+    left: 0px;
+    top: 110vh;
+    border: 4px solid black;
+    background: #a4f3de;
+    padding-right: 2rem;
+  }
+
+  .rosa-4 {
+    position: absolute;
+    width: 100vw;
+    height: 50vh;
+    left: 0px;
+    top: 160vh;
+    border: 4px solid black;
+    background: #f5b6f7;
+  }
+
+  .logos {
+    width: 80vw;
+  }
+
+  .skillsdiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .skill {
+    font-family: jetbrains mono;
+    font-size: 0.9rem;
+  }
+
+  .skills {
+    font-size: 2rem;
+  }
+
+  .img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .logos2 {
+    width: 69vw;
+  }
+}
