--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,6 +2,7 @@
   position: fixed;
   z-index: 420;
   width: 100%;
+  height: 5rem;
   background-color: azure;
   border: 5px solid black;
 }
@@ -9,6 +10,8 @@
 nav {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  height: 100%;
 }
 
 ul {
@@ -22,7 +25,7 @@ ul {
 .nav-link {
   text-decoration: none;
   color: black;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 600;
   font-family: JetBrains Mono;
   outline: none;
@@ -37,27 +40,35 @@ ul {
   outline: none;
 }
 
-@media screen and (max-width: 768px) {
-  .nav-link {
-    font-size: 0.9rem;
-  }
-  nav {
-    padding-left: 0.5rem;
-    margin-right: 0.5rem;
-  }
-  ul {
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-  }
+.nav-link:focus {
+  color: #f5f5f5;
+  background-color: #000000;
+  border-radius: 5px;
+  padding: 0.5rem;
+  transition: all 0.3s ease-in-out;
+  outline: none;
 }
 
-/* media query for ipad */
+.nav-link:active {
+  color: #f5f5f5;
+  background-color: #000000;
+  border-radius: 5px;
+  padding: 0.5rem;
+  transition: all 0.3s ease-in-out;
+  outline: none;
+}
 
-@media screen and (max-width: 1024px) {
+/* media query mobile */
+
+@media screen and (max-width: 768px) {
+  .div-nav {
+    height: 4rem;
+  }
   .nav-link {
-    font-size: 1.2rem;
+    font-size: 1rem;
+  }
+  ul {
+    width: 100%;
+    margin-right: 1rem;
   }
 }
