--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -3,13 +3,19 @@
   flex-wrap: wrap;
   justify-content: space-around;
   background-color: #e8ffa8;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+}
+
+.pic-2, .pic-1{
+  margin-top: 4em;
 }
 
 .weather,
 .sticky {
   cursor: pointer;
 }
+
 
 .weather:hover {
   animation: pulse;
@@ -24,6 +30,10 @@
 svg {
   margin-bottom: 50px;
   color: black;
+  width: 500px;
+  height: 500px;
+  margin-top: 10px;
+  padding-top: 10px;
 }
 
 svg:hover {
@@ -32,20 +42,28 @@ svg:hover {
 }
 
 @media screen and (max-width: 768px) {
+  .projects-wrap{
+    background-color: #e8ffa8;
+    height: 100%;
+    margin-top: 2em;
+  }
   .projects {
     height: 100%;
+    width: 100%;
   }
   .weather,
   .sticky {
     cursor: pointer;
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     padding-left: 10px;
+    margin-top: 40px;
   }
 
   .pic {
-    width: 90vw;
-    height: 90vw;
+    width: 10em;
+    height: 10em;
+    padding: 2em;
   }
 }
 
